SERVER-78505 Database cache does not use the 'allowLocks' option correctly